--- a/src/pages/docs.mdx
+++ b/src/pages/docs.mdx
@@ -7,9 +7,9 @@ import { AstroSeo } from "@astrolib/seo";
 <AstroSeo
   title="Docs"
   description="The documentation for trak."
-  canonical="http://usetrak.com"
+  canonical="http://usetrak.com/docs"
   openGraph={{
-    url: "http://usetrak.com",
+    url: "http://usetrak.com/docs",
     title: "Documentation",
     description: "The documentation for trak.",
     images: [
@@ -17,14 +17,14 @@ import { AstroSeo } from "@astrolib/seo";
         url: "http://usetrak.com/opengraph/social-og.jpeg",
         width: 1200,
         height: 630,
-        alt: "Social open graph",
+        alt: "Trak",
         type: "image/jpeg",
       },
       {
         url: "http://usetrak.com/opengraph/twitter-og.jpeg",
         width: 4096,
         height: 4096,
-        alt: "Twitter open graph",
+        alt: "Trak",
         type: "image/jpeg",
       },
       { url: "http://usetrak.com/opengraph/social-og.jpeg" },
