--- a/src/content/devlog/v0.0.5 launched.md
+++ b/src/content/devlog/v0.0.5 launched.md
@@ -12,7 +12,7 @@ Trak version 0.0.5 is out!
 It's a big release this time too.
 
 This time I've focused on UX and bug fixing.
-Three was many little—and not so little—things that wasn't comfortable or curated.
+Three was many little—and not so little—things that weren't comfortable or curated.
 So if v0.0.4 introduced a lot of new concepts, here I've refined them.
 
 The Homebrew install method, the pickers and the `start end` insert moved the bar high regarding the UX of the project.
@@ -44,7 +44,7 @@ This new website explores the deeps of this tool.
 Commands, options and some tip about them.
 
 There will be for sure some overlaps of content, for example with guides and informational articles.
-But the docs will be more about to things with `trak` and this website more about the principles and knowledge.
+But the docs will be more about doing things with `trak` and this website more about the principles and knowledge.
 I imagine many links between the two websites in the future.
 
 [Give it a look!](docs.usetrak.com)
