--- a/src/content/devlog/v0.0.5 launched.md
+++ b/src/content/devlog/v0.0.5 launched.md
@@ -162,9 +162,8 @@ The command is `trak projects archive <project-id>`.
 
 - Better message for "A session is already started", now it shows also the elapsed time like in the status bar
 - Better and fixed help texts of commands
-- Added Tips here and there
-- Change parameter when to date
-- Improve the print_missing_timings_error message, triggered when user doesn't provide any timings data
-- Remove today property. I concluded that it's just another way to say "now".
-- TODO: To expand with a guide that explains the different methods (sub|add|precise)
-- Fix bug in add method
+- I have added tips here and there.
+- Change the "when" parameter to a date.
+- I have improved the "print_missing_timings_error" message, which is triggered when the user fails to provide any timings data.
+- I have removed the "today" property, it's just another way of saying "now."
+- Fixed bug in the "add" method.
